...
						padding: 8,
						alignItems: "flex-end",
					}}
				>
					<Button
						title="Done"
						accessibilityLabel="Done typing"
						quiet
						onPress={Keyboard.dismiss}
					/>
				</View>
			</InputAccessoryView>
		</View>
...
